# Motor-Imagery-EEG-

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
artifacts/: per_subject_classical20_binary_within.csv  per_subject_colab_binary_within.csv  stats_classical20_binary_within.csv  stats_colab_binary_within.csv  summary_classical20_binary_within.csv  summary_colab_binary_within.csv  summary_kaggle_binary_loso.csv
configs/: binary.yaml  binary_classical20.yaml  fourclass.yaml  smoke.yaml
notebooks/: 01_eda.ipynb  colab_gpu_benchmark.ipynb  kaggle_gpu_loso.ipynb
src/mibci/: __init__.py  cache.py  config.py  dataset.py  logging_utils.py  run.py
src/mibci/data/: download.py  exclusions.py  loader.py
src/mibci/evaluation/: cv.py  metrics.py  stats.py
src/mibci/features/: csp.py  riemann.py
src/mibci/interpret/: csp_patterns.py  eegnet_filters.py
src/mibci/models/: classical.py  denoising_eegnet.py  eegnet.py  factory.py  torch_utils.py
src/mibci/preprocess/: epochs.py  filters.py  ica.py
src/mibci/viz/: plots.py
tests/: conftest.py  test_config.py  test_csp.py  test_epochs.py  test_filters.py
